# APEX_2.0

./: .forge_last_branch  .gitignore  AGENTS.md  Build_PRD.md  Build_PRD_CTO_Review.md  Build_PRD_CTO_Review_R2.md  Build_PRD_CTO_Review_R3.md  Build_PRD_CTO_Review_R4.md  Build_PRD_graph.md  FORGE.md  README.md  eslint.config.mjs  forge-memory-client.ts  forge-memory.sh  forge.sh  jest.config.cjs  package.json  prd.json  pyproject.toml  tagteam.plan.json
brain/: Dreaming.py
core/: Birth_Certificate.md  Birth_Initiation_Specifications.md  Cargo.toml  Git_RePuGS.md  Startup_Rehydration_Spec.md  git_registry.yaml
core/src/: auth.rs  firewall.rs  lib.rs  main.rs  model_registry.rs  shell.rs
core/tests/: vsh001_shell_engine.rs
docs/Vishion_PRD/: Nervous_System_PRD.md  Token_Ledger_IO_Spec.md  Vashion_Structural_Graph.mmd
forge/: __init__.py  archive.py  cli.py  config.py  filesystem.py  gates.py  git.py  governance.py  logging.py  memory.py  models.py  phase6_done_monitor.py  prd.py  prd_validator.py  preflight.py  process.py  runner.py  sidecars.py  toolchains.py  worklog_loop.py  workspace.py
forge/agents/: __init__.py  base.py  claude.py  codex.py  factory.py
forge/tagteam/: __init__.py  coordinator.py  dag.py  models.py  orchestrator.py  planner.py  resolver.py  worktree.py
forgemp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
staged-rules/session_forge-20260401220604-3552177/: manifest.json  proposed_delta.md
staged-rules/session_forge-20260401221144-3556690/: manifest.json  proposed_delta.md
staged-rules/session_forge-20260401221551-3560150/: manifest.json  proposed_delta.md
staged-rules/session_forge-20260401221907-3562859/: manifest.json  proposed_delta.md
(+1 files in other folders)
